Implement MSLE (MeanSquaredLogarithmicError) evaluation metric for regression analysis (#58684)