@@ -5,11 +5,12 @@
  */
 package org.elasticsearch.xpack.core.ml.dataframe.evaluation.regression;
 
+import org.elasticsearch.common.Nullable;
 import org.elasticsearch.common.ParseField;
 import org.elasticsearch.common.collect.Tuple;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.xcontent.ObjectParser;
+import org.elasticsearch.common.xcontent.ConstructingObjectParser;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentParser;
 import org.elasticsearch.script.Script;
@@ -17,8 +18,6 @@ import org.elasticsearch.search.aggregations.AggregationBuilder;
 import org.elasticsearch.search.aggregations.AggregationBuilders;
 import org.elasticsearch.search.aggregations.Aggregations;
 import org.elasticsearch.search.aggregations.PipelineAggregationBuilder;
-import org.elasticsearch.search.aggregations.metrics.ExtendedStats;
-import org.elasticsearch.search.aggregations.metrics.ExtendedStatsAggregationBuilder;
 import org.elasticsearch.search.aggregations.metrics.NumericMetricsAggregation;
 import org.elasticsearch.xpack.core.ml.dataframe.evaluation.EvaluationMetric;
 import org.elasticsearch.xpack.core.ml.dataframe.evaluation.EvaluationMetricResult;
@@ -26,46 +25,60 @@ import org.elasticsearch.xpack.core.ml.dataframe.evaluation.EvaluationParameters
 
 import java.io.IOException;
 import java.text.MessageFormat;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
 import java.util.Optional;
 
+import static org.elasticsearch.common.xcontent.ConstructingObjectParser.optionalConstructorArg;
 import static org.elasticsearch.xpack.core.ml.dataframe.evaluation.MlEvaluationNamedXContentProvider.registeredMetricName;
 
 /**
- * Calculates R-Squared between two known numerical fields.
+ * Calculates the mean squared error between two known numerical fields.
  *
- * equation: R-Squared = 1 - SSres/SStot
- * such that,
- * SSres = Σ(y - y´)^2, The residual sum of squares
- * SStot =  Σ(y - y_mean)^2, The total sum of squares
+ * equation: msle = 1/n * Σ(log(y + offset) - log(y´ + offset))^2
+ * where offset is used to make sure the argument to log function is always positive
  */
-public class RSquared implements EvaluationMetric {
+public class MeanSquaredLogarithmicError implements EvaluationMetric {
 
-    public static final ParseField NAME = new ParseField("r_squared");
+    public static final ParseField NAME = new ParseField("mean_squared_logarithmic_error");
+
+    public static final ParseField OFFSET = new ParseField("offset");
+    private static final double DEFAULT_OFFSET = 1.0;
 
     private static final String PAINLESS_TEMPLATE =
-        "def diff = doc[''{0}''].value - doc[''{1}''].value;" +
+        "def offset = {2};" +
+        "def diff = Math.log(doc[''{0}''].value + offset) - Math.log(doc[''{1}''].value + offset);" +
         "return diff * diff;";
-    private static final String SS_RES = "residual_sum_of_squares";
+    private static final String AGG_NAME = "regression_" + NAME.getPreferredName();
 
-    private static String buildScript(Object... args) {
+    private static String buildScript(Object...args) {
         return new MessageFormat(PAINLESS_TEMPLATE, Locale.ROOT).format(args);
     }
 
-    private static final ObjectParser<RSquared, Void> PARSER =
-        new ObjectParser<>("r_squared", true, RSquared::new);
+    private static final ConstructingObjectParser<MeanSquaredLogarithmicError, Void> PARSER =
+        new ConstructingObjectParser<>(NAME.getPreferredName(), true, args -> new MeanSquaredLogarithmicError((Double) args[0]));
 
-    public static RSquared fromXContent(XContentParser parser) {
+    static {
+        PARSER.declareDouble(optionalConstructorArg(), OFFSET);
+    }
+
+    public static MeanSquaredLogarithmicError fromXContent(XContentParser parser) {
         return PARSER.apply(parser, null);
     }
 
+    private final double offset;
     private EvaluationMetricResult result;
 
-    public RSquared(StreamInput in) {}
+    public MeanSquaredLogarithmicError(StreamInput in) throws IOException {
+        this.offset = in.readDouble();
+    }
 
-    public RSquared() {}
+    public MeanSquaredLogarithmicError(@Nullable Double offset) {
+        this.offset = offset != null ? offset : DEFAULT_OFFSET;
+    }
 
     @Override
     public String getName() {
@@ -77,27 +90,17 @@ public class RSquared implements EvaluationMetric {
                                                                                   String actualField,
                                                                                   String predictedField) {
         if (result != null) {
-            return Tuple.tuple(List.of(), List.of());
+            return Tuple.tuple(Collections.emptyList(), Collections.emptyList());
         }
         return Tuple.tuple(
-            List.of(
-                AggregationBuilders.sum(SS_RES).script(new Script(buildScript(actualField, predictedField))),
-                AggregationBuilders.extendedStats(ExtendedStatsAggregationBuilder.NAME + "_actual").field(actualField)),
-            List.of());
+            Arrays.asList(AggregationBuilders.avg(AGG_NAME).script(new Script(buildScript(actualField, predictedField, offset)))),
+            Collections.emptyList());
     }
 
     @Override
     public void process(Aggregations aggs) {
-        NumericMetricsAggregation.SingleValue residualSumOfSquares = aggs.get(SS_RES);
-        ExtendedStats extendedStats = aggs.get(ExtendedStatsAggregationBuilder.NAME + "_actual");
-        // extendedStats.getVariance() is the statistical sumOfSquares divided by count
-        final boolean validResult = residualSumOfSquares == null
-            || extendedStats == null
-            || extendedStats.getCount() == 0
-            || extendedStats.getVariance() == 0;
-        result = validResult ?
-            new Result(0.0) :
-            new Result(1 - (residualSumOfSquares.value() / (extendedStats.getVariance() * extendedStats.getCount())));
+        NumericMetricsAggregation.SingleValue value = aggs.get(AGG_NAME);
+        result = value == null ? new Result(0.0) : new Result(value.value());
     }
 
     @Override
@@ -112,12 +115,13 @@ public class RSquared implements EvaluationMetric {
 
     @Override
     public void writeTo(StreamOutput out) throws IOException {
-
+        out.writeDouble(offset);
     }
 
     @Override
     public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
         builder.startObject();
+        builder.field(OFFSET.getPreferredName(), offset);
         builder.endObject();
         return builder;
     }
@@ -126,26 +130,26 @@ public class RSquared implements EvaluationMetric {
     public boolean equals(Object o) {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
-        return true;
+        MeanSquaredLogarithmicError that = (MeanSquaredLogarithmicError) o;
+        return this.offset == that.offset;
     }
 
     @Override
     public int hashCode() {
-        // create static hash code from name as there are currently no unique fields per class instance
-        return Objects.hashCode(NAME.getPreferredName());
+        return Double.hashCode(offset);
     }
 
     public static class Result implements EvaluationMetricResult {
 
-        private static final String VALUE = "value";
-        private final double value;
+        private static final String ERROR = "error";
+        private final double error;
 
-        public Result(double value) {
-            this.value = value;
+        public Result(double error) {
+            this.error = error;
         }
 
         public Result(StreamInput in) throws IOException {
-            this.value = in.readDouble();
+            this.error = in.readDouble();
         }
 
         @Override
@@ -158,19 +162,19 @@ public class RSquared implements EvaluationMetric {
             return NAME.getPreferredName();
         }
 
-        public double getValue() {
-            return value;
+        public double getError() {
+            return error;
         }
 
         @Override
         public void writeTo(StreamOutput out) throws IOException {
-            out.writeDouble(value);
+            out.writeDouble(error);
         }
 
         @Override
         public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
             builder.startObject();
-            builder.field(VALUE, value);
+            builder.field(ERROR, error);
             builder.endObject();
             return builder;
         }
@@ -180,12 +184,12 @@ public class RSquared implements EvaluationMetric {
             if (this == o) return true;
             if (o == null || getClass() != o.getClass()) return false;
             Result other = (Result)o;
-            return value == other.value;
+            return error == other.error;
         }
 
         @Override
         public int hashCode() {
-            return Objects.hashCode(value);
+            return Objects.hashCode(error);
         }
     }
 }
